tests/cases/compiler-development/artifact/errors/diagnostic-borrow-conflict.diagnostic
diagnostic error code=O0001 family=ownership message="cannot immutably borrow mutably borrowed binding 'value'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-conflict.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-conflict.ari" bytes=158
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-conflict.ari" line=7 column=36 end_line=7 end_column=39 byte_start=144 byte_end=147 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-borrow-conflict.ari:7:36\n   |\n 7 |   return needs_both(ref mut value, ref value);\n   |                                    ^^^"
